add reservation integration test